--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
         <div class="container">
           <div class="card">
             <div class="container">
-              <img src="assets/travelling.png" alt="travelling" class="medium">
+              <div class="wrapper"><img src="assets/travelling.png" alt="travelling" class="medium"></div>
               <div>Lorem ipsum dolor sit amet</div>
             </div>
           </div>
           <div class="card">
             <div class="container">
-              <img src="assets/travel.png" alt="travel" class="medium">
+              <div class="wrapper"><img src="assets/travel.png" alt="travel" class="medium"></div>
               <div>Lorem ipsum dolor sit amet</div>
             </div>
           </div>
           <div class="card">
             <div class="container">
-              <img src="assets/cruise.png" alt="travel" class="medium">
+              <div class="wrapper"><img src="assets/cruise.png" alt="travel" class="medium"></div>
               <div>Lorem ipsum dolor sit amet</div>
             </div>
           </div>
           <div class="card">
             <div class="container">
-              <img src="assets/hot-air-balloon.png" alt="travel" class="medium">
+              <div class="wrapper"><img src="assets/hot-air-balloon.png" alt="travel" class="medium"></div>
               <div>Lorem ipsum dolor sit amet</div>
             </div>
           </div>
